fix for - In Events Page, Events are displaying with out proper alignment

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2509,7 +2509,6 @@ button.btn.small, input[type="submit"].btn.small {
 .thumbnail {
   display: block;
   padding: 4px;
-  margin-bottom: 30px;
   line-height: 1;
   border: 1px solid #ddd;
   -webkit-border-radius: 4px;
@@ -2518,7 +2517,6 @@ button.btn.small, input[type="submit"].btn.small {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
-  height: 420px;
 }
 a.thumbnail:hover {
   border-color: #0088cc;
